# brain-games

./: Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: Flake8-WMPS  Flake8-WMPS.yml  Flake8-WPS.yml
brain_games/: __init__.py  cli.py  engine.py
brain_games/games/: brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py
brain_games/scripts/: __init__.py  brain_even.py  brain_game_engine.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py  calc_round.py  engine.py  even_round.py  gcd_round.py  prime_round.py  progression_round.py  welcome_round.py
brain_games/scripts/games/: brain_calc.py  brain_even.py  brain_gcd.py  brain_prime.py  brain_progression.py
