[tool.poetry]
name = "hexlet-code"
version = "0.7.3"
description = "Educational project of the Hexlet website for creating a text-based intellectual game"
authors = ["Dilettant <dedenev1985@gmail.com>"]
packages = [
	{include = "brain_games"},
]

[tool.poetry.dependencies]
python = "^3.8"
prompt = "^0.4.1"

[tool.poetry.dev-dependencies]
wemake-python-styleguide = "^0.14.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.welcome_round:main"
brain-even = "brain_games.scripts.even_round:main"
brain-calc = "brain_games.scripts.calc_round:main"
brain-gcd = "brain_games.scripts.gcd_round:main"
brain-progression = "brain_games.scripts.progression_round:main"
brain-prime = "brain_games.scripts.prime_round:main"
